--- a/steintech/TODO.txt
+++ b/steintech/TODO.txt
@@ -3,3 +3,5 @@ add saving recipes to user list feature
 fix pagination UI on recipes list view
 add feature to flag new recipes for admin review
 allow recipes to be sorted by date posted
+track number of reCaptcha calls per month
+add tests that work with reCaptcha forms
