Added unit validator & fixed unique profile test.

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,4 @@ add feature to flag new recipes for admin review
 allow recipes to be sorted by date posted
 track number of reCaptcha calls per month
 add tests that work with reCaptcha forms
+make tests for recipeingredients and recipesteps
